--- a/real-time-data.html
+++ b/real-time-data.html
@@ -201,14 +201,14 @@
   <!-- Tabs Navigation -->
   <div class="border-b border-gray-200 mb-6">
     <div class="flex">
-      <button id="tab-cpi" class="tab-button active">Consumer Price Index (CPI)</button>
-      <button id="tab-gdp" class="tab-button">GDP</button>
+      <button id="tab-gdp" class="tab-button active">GDP</button>
+      <button id="tab-cpi" class="tab-button">Consumer Price Index (CPI)</button>
       <button id="tab-unemployment" class="tab-button">Unemployment</button>
     </div>
   </div>
 
   <!-- CPI Tab Content -->
-  <div id="content-cpi" class="tab-content active">
+  <div id="content-cpi" class="tab-content">
     <div class="bg-white p-6 rounded-lg shadow-md mb-8">
       <h3 class="text-xl font-bold text-blue-700 mb-4">Consumer Price Index (CPI) Analysis</h3>
       <p class="mb-4">Explore 12-month percentage changes in the Consumer Price Index by category since 2005. Use the controls below to customize your view.</p>
@@ -324,7 +324,7 @@
   </div>
 
   <!-- GDP Tab Content -->
-  <div id="content-gdp" class="tab-content">
+  <div id="content-gdp" class="tab-content active">
     <div class="bg-white p-6 rounded-lg shadow-md mb-8">
       <h3 class="text-xl font-bold text-blue-700 mb-4">GDP Components Visualization</h3>
       <p class="mb-4">Explore the composition of U.S. GDP and how different components contribute to economic growth over time.</p>
