--- a/real-time-data.html
+++ b/real-time-data.html
@@ -1615,20 +1615,29 @@
   // Set up event listeners
   function setupEventListeners() {
     // CPI Heatmap selectors
-    document.getElementById('heatmap-month').addEventListener('change', () => {
-      console.log('Heatmap month changed, updating heatmap...');
-      createHeatmapTable();
-    });
+    const heatmapMonth = document.getElementById('heatmap-month');
+    if (heatmapMonth) {
+      heatmapMonth.addEventListener('change', () => {
+        console.log('Heatmap month changed, updating heatmap...');
+        createHeatmapTable();
+      });
+    }
 
-    document.getElementById('heatmap-year').addEventListener('change', () => {
-      console.log('Heatmap year changed, updating heatmap...');
-      createHeatmapTable();
-    });
+    const heatmapYear = document.getElementById('heatmap-year');
+    if (heatmapYear) {
+      heatmapYear.addEventListener('change', () => {
+        console.log('Heatmap year changed, updating heatmap...');
+        createHeatmapTable();
+      });
+    }
 
-    document.getElementById('heatmap-months').addEventListener('change', () => {
-      console.log('Number of months changed, updating heatmap...');
-      createHeatmapTable();
-    });
+    const heatmapMonths = document.getElementById('heatmap-months');
+    if (heatmapMonths) {
+      heatmapMonths.addEventListener('change', () => {
+        console.log('Number of months changed, updating heatmap...');
+        createHeatmapTable();
+      });
+    }
 
     // Set up GDP event listeners
     setupGDPEventListeners();
@@ -3442,10 +3451,10 @@
         key !== 'year' && key !== 'fullYear' && key !== 'Gross domestic product'
       ));
 
-      // Define major sectors to display - using exact names from the data
+      // Define major sectors to display - using low aggregated sectors
       const majorSectors = [
-        'Agriculture',
-        'Mining',
+        'Agriculture, forestry, fishing and hunting',
+        'Mining, quarrying, and oil and gas extraction',
         'Utilities',
         'Construction',
         'Manufacturing',
@@ -3453,13 +3462,10 @@
         'Retail trade',
         'Transportation and warehousing',
         'Information',
-        'Finance and insurance',
-        'Real estate and rental and leasing',
+        'Finance, insurance, real estate, rental, and leasing',
         'Professional and business services',
-        'Educational services',
-        'Health care and social assistance',
-        'Arts, entertainment, and recreation',
-        'Accommodation and food services',
+        'Educational services, health care, and social assistance',
+        'Arts, entertainment, recreation, accommodation, and food services',
         'Other services, except government',
         'Government'
       ];
